[gd_scene load_steps=26 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://bg.png" type="Texture" id=3]
[ext_resource path="res://Flower3.png" type="Texture" id=4]
[ext_resource path="res://player.png" type="Texture" id=5]
[ext_resource path="res://Plant.gd" type="Script" id=6]
[ext_resource path="res://GreenBG.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3196.15, 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 1062.84, 10 )

[sub_resource type="CircleShape2D" id=13]
radius = 153.975

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.65573, 2.27866 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 14.8386, 20.7491 )

[sub_resource type="Animation" id=9]
resource_name = "Flower"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Plant:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Plant:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=10]
resource_name = "Flower Gone"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Plant:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Plant:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.963, 31.9637 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Right_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Up_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Down_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "Idle_up",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "Idle_down",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ) ],
"loop": true,
"name": "Idle_right",
"speed": 5.0
} ]

[node name="Main " type="Node2D"]

[node name="GreenBG" type="Sprite" parent="."]
position = Vector2( 2164.65, 1685.79 )
scale = Vector2( 99.9766, 71.202 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="OutBound Barriers" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutBound Barriers"]
position = Vector2( 1137.64, -3.36356 )
shape = SubResource( 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OutBound Barriers"]
position = Vector2( 1516.31, 3236.77 )
shape = SubResource( 8 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="OutBound Barriers"]
position = Vector2( -6.65271, 599.192 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="OutBound Barriers"]
position = Vector2( 4146.52, 800.385 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="Level" type="Sprite" parent="."]
position = Vector2( 2070.41, 1620.45 )
scale = Vector2( 18, 18 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Barrier" type="StaticBody2D" parent="."]
position = Vector2( 21.6435, 1481.8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier"]
position = Vector2( 790.682, 75.5272 )
shape = SubResource( 12 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Barrier"]
position = Vector2( 3477.69, 595.958 )
shape = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Barrier"]
position = Vector2( 1629.03, -573.588 )
shape = SubResource( 12 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Barrier"]
position = Vector2( 2425.69, -481.59 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Barrier"]
position = Vector2( 1843.43, 1128.94 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Barrier"]
position = Vector2( 766.578, -740.279 )
shape = SubResource( 13 )

[node name="Seeds" type="Node" parent="."]

[node name="Seeds" type="StaticBody2D" parent="Seeds"]
position = Vector2( 268.676, 345.966 )
scale = Vector2( 80, 120 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="icon2" type="Sprite" parent="Seeds/Seeds"]
visible = false
position = Vector2( -0.00640869, -0.0022583 )
scale = Vector2( 0.035903, 0.0499169 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Seeds/Seeds"]
shape = SubResource( 1 )

[node name="Seed Area" type="Area2D" parent="Seeds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Seeds/Seed Area"]
position = Vector2( 277.186, 336.583 )
scale = Vector2( 20, 20 )
shape = SubResource( 11 )

[node name="Plants" type="Node" parent="."]

[node name="Plant" type="Area2D" parent="Plants"]
position = Vector2( 2772.37, 2428.5 )
scale = Vector2( 40, 40 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Plants/Plant"]
anims/Flower = SubResource( 9 )
"anims/Flower Gone" = SubResource( 10 )

[node name="Plant" type="Sprite" parent="Plants/Plant"]
visible = false
position = Vector2( -0.00640869, -0.0022583 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plants/Plant"]
position = Vector2( 0.100796, 2.84742 )
shape = SubResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 1053.97, 1297.18 )
scale = Vector2( 3, 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
speed = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 3, 3 )

[node name="Seed_Label" type="Label" parent="Player/Camera2D"]
margin_left = 309.0
margin_top = -290.0
margin_right = 493.0
margin_bottom = -253.0
text = "Seed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_Label" type="Label" parent="Player/Camera2D"]
margin_left = -507.333
margin_top = 242.0
margin_right = -332.333
margin_bottom = 296.0
text = "Timer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
scale = Vector2( 3, 3 )
frames = SubResource( 7 )
animation = "Idle_right"
playing = true

[node name="Timer" type="Timer" parent="Player"]
wait_time = 10.0
[connection signal="body_entered" from="Seeds/Seed Area" to="Player" method="_on_Seed_Area_body_entered"]
[connection signal="body_entered" from="Plants/Plant" to="Plants/Plant" method="_on_Plant_body_entered"]
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_Timer_timeout"]
